이미지 파일명으로 수정, 그룹권한 이전 수정
